--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<nav>
 			<ul class="top-menu">
 				<li><a href="/home/">HOME</a></li>
-				<li class="active">ABOUT US</li>
+				<li class="active">ABOUT DAGS</li>
 				<li><a href="/services/">SERVICES</a></li>
 				<li><a href="/partners/">PARTNERS</a></li>
 				<li><a href="/customers/">CUSTOMERS</a></li>
