--- a/dotabuffgavno/index2.html
+++ b/dotabuffgavno/index2.html
@@ -22,7 +22,7 @@
 
         </header>
      <p class="instructions">Вам необходимо включить опцию "Expose Public Match Data", чтобы ваша статистика отображалась на Dotabuff.<span class="more"><a>Узнать больше</a></span></p><br>
-            <img  src="file:///C:/Users/%D0%95%D0%B3%D0%BE%D1%80/Desktop/%D0%92%D0%B5%D1%80%D1%81%D1%82%D0%BA%D0%B0%20%E2%84%962/images/content-logo.png">
+            <img  src="images/content-logo.png">
         <form name="Поиск героев,предметов,игроков,команд" action="#" method="post">
             <input type="text"  name="q" placeholder="Поиск героев,предметов,игроков,команд...">
         </form>
