added some new details for dotagavno

--- a/dotabuffgavno/index2.html
+++ b/dotabuffgavno/index2.html
@@ -24,7 +24,8 @@
      <p class="instructions">Вам необходимо включить опцию "Expose Public Match Data", чтобы ваша статистика отображалась на Dotabuff.<span class="more"><a>Узнать больше</a></span></p><br>
             <img  src="images/content-logo.png">
         <form name="Поиск героев,предметов,игроков,команд" action="#" method="post">
-            <input type="text"  name="q" placeholder="Поиск героев,предметов,игроков,команд...">
+            <input type="text"  name="q" placeholder="Поиск героев,предметов,игроков,команд..."><br>
+     <p class="updateinf"><b><span class="NEW">NEW:</span></b> <a>Bringing Back Armlet</a> <span class="verticb"> |</span> <a>The outcome of the TI4</a></p>
         </form>
         <footer>
             <p>dsadaf</p>
