changed the urls of icons

--- a/untitled/index.html
+++ b/untitled/index.html
@@ -11,9 +11,9 @@
        <div class="headback"></div>
          <p class="headersign">Your time to win</p>
  <div class="image">
-    <img class="egor" width="250" height="250" src="images/icon-egor.png" href="/jaguar">
-    <img class="Dima" width="250" height="250" src="images/icon-dima.png" href="/amidaniram">
-    <img class="Stas" width="250" height="250" src="images/icon-stas.png" href="/merkodi">
+   <a href="/jaguar"><img class="egor" width="250" height="250" src="images/icon-egor.png"></a>
+   <a href="/amidaniram"><img class="Dima" width="250" height="250" src="images/icon-dima.png"></a>
+   <a href="/merkodi"><img class="Stas" width="250" height="250" src="images/icon-stas.png"></a>
  </div>
 
  <form class="form1" action="/echo" method="post">
